--- a/admin/css/theme.css
+++ b/admin/css/theme.css
@@ -1,4 +1,31 @@
 :root {
-    --blogify-primary: #f2470d;
-    --white: #faf0e6;
-  }
+  --blogify-primary-color: #f2470d;
+  --blogify-soft-text-color:  #93766c;
+}
+
+div.blogify {
+  padding: 20px;
+  gap: 16px;
+  display: flex;
+  flex-direction: column;
+}
+
+div.blogify *>.left {
+  display: flex;
+  align-items: center;
+  margin-right: auto;
+}
+
+div.blogify *>.right {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+}
+
+div.blogify * .left> * {
+  margin-right: 10px;
+}
+
+div.blogify * .right> * {
+  margin-left: 10px;
+}
