--- a/admin/css/theme.css
+++ b/admin/css/theme.css
@@ -1,9 +1,10 @@
 :root {
   --blogify-primary-color: #f2470d;
+  --blogify-border-color: #e3dbd9;
   --blogify-soft-text-color:  #93766c;
 }
 
-div.blogify {
+div.blogify main {
   padding: 20px;
   gap: 16px;
   display: flex;
