--- a/admin/css/pagination.css
+++ b/admin/css/pagination.css
@@ -13,6 +13,10 @@ div.blogify span.pagination span.page-numbers {
     gap: 5px;
 }
 
+div.blogify span.pagination span.page-numbers img.arrow{
+    height: 10px;
+}
+
 div.blogify span.pagination span.page-info {
     display: flex;
     justify-content: center;
@@ -21,12 +25,4 @@ div.blogify span.pagination span.page-info {
     gap: 10px;
     font-size: 13px;
     color: var(--blogify-soft-text-color);
-}
-
-div.blogify span.pagination span.page-numbers img#arrow-left {
-    transform: rotate(180deg);
-}
-
-div.blogify span.pagination span.page-numbers img#arrow-right {
-    transform: rotate(360deg);
 }
