--- a/admin/css/button.css
+++ b/admin/css/button.css
@@ -1,3 +1,8 @@
+div.blogify button {
+  transition: background-color 0.2s ease-in-out;
+  cursor: pointer;
+}
+
 div.blogify button.primary {
     background-color: var(--blogify-primary-color);
     color: white;
@@ -5,8 +10,13 @@ div.blogify button.primary {
     font-weight: 500;
     padding: 9px 14px;
     border-radius: 8px;
-    border: 0
+    border: 0   
 }
+
+div.blogify button.primary:hover {
+  background-color: var(--blogify-primary-hover-color);
+}
+
 
 div.blogify button.secondary {
   font-size: 13px;
@@ -18,7 +28,6 @@ div.blogify button.secondary {
   background-color: white;
 }
 
-div.blogify button:active{
-  position: relative;
-  top: 1px;
+div.blogify button.secondary:hover {
+  background-color: #f5f5f5;
 }
