refactor(project): restructure

--- a/admin/assets/css/button.css
+++ b/admin/assets/css/button.css
@@ -10,7 +10,7 @@ div.blogify button.primary {
     font-weight: 500;
     padding: 9px 14px;
     border-radius: 8px;
-    border: 0   
+    border: 0;   
 }
 
 div.blogify button.primary:hover {
