--- a/admin/assets/css/redirect.css
+++ b/admin/assets/css/redirect.css
@@ -1,12 +1,25 @@
-div.blogify article.redirect {
+div.wrap article.redirect span.instructions h1 {
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+div.wrap article.redirect span.instructions h3 {
+    font-size: 18px;
+    color: #666;
+    /* Grayish text for explanation */
+    margin-bottom: 20px;
+}
+
+div.wrap article.redirect {
     text-align: center;
     background-color: #ffffff;
     padding: 40px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
+    margin: 20px;
 }
 
-div.blogify span.instructions {
+div.wrap span.instructions {
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -15,7 +28,7 @@ div.blogify span.instructions {
     gap: 30px;
 }
 
-div.blogify section.logos {
+div.wrap section.logos {
     flex: 1;
     flex-wrap: nowrap;
     flex-direction: row;
@@ -24,14 +37,14 @@ div.blogify section.logos {
     display: flex;
 }
 
-div.blogify section.logos img#blogify-banner {
+div.wrap section.logos img#blogify-banner {
     height: 50px;
 }
 
-div.blogify section.logos img#two-way-arrow {
+div.wrap section.logos img#two-way-arrow {
     height: 80px;
 }
 
-div.blogify section.logos img#wordpress-banner {
+div.wrap section.logos img#wordpress-banner {
     height: 100px;
 }
