--- a/admin/assets/css/header.css
+++ b/admin/assets/css/header.css
@@ -7,12 +7,12 @@ div.blogify header #blogify-banner {
     height: 28px;
 }
 
-div.blogify header img .icon {
+div.blogify header img.blogify-header-icon {
     width: 20px;
     height: 20px;
 }
 
-div.blogify header #credits {
+div.blogify header #blogify-credits {
     display: flex;
     gap: 5px;
     align-items: center;
@@ -25,17 +25,16 @@ div.blogify header #credits {
     background-color: var(--blogify-primary-color);
 }
 
-div.blogify header #credits-logo {
+div.blogify header #blogify-credits-logo {
     width: 10px;
     height: 10px;
     border-radius: 50%;
     border: solid 1.5px #fff;
 }
 
-div.blogify header #user-avatar {
+div.blogify header #blogify-user-avatar {
     width: 28px;
     height: 28px;
     border-radius: 50%;
     border: solid 1.5px var(--blogify-primary-color);
 }
-
