--- a/admin/assets/css/button.css
+++ b/admin/assets/css/button.css
@@ -3,7 +3,7 @@ div.blogify button {
   cursor: pointer;
 }
 
-div.blogify button.primary {
+div.blogify button.blogify-primary {
     background-color: var(--blogify-primary-color);
     color: white;
     font-size: 15px;
@@ -13,21 +13,21 @@ div.blogify button.primary {
     border: 0;   
 }
 
-div.blogify button.primary:hover {
+div.blogify button.blogify-primary:hover {
   background-color: var(--blogify-primary-hover-color);
 }
 
 
-div.blogify button.secondary {
+div.blogify button.blogify-secondary {
   font-size: 13px;
   font-weight: 500;
   padding: 7px 12px;
   border-radius: 8px;
   box-shadow: 0 1px 1px 0 rgba(168, 145, 138, 0.3);
-  border: solid 1px #e3dbd9;
+  border: solid 1px var(--blogify-border-color);
   background-color: white;
 }
 
-div.blogify button.secondary:hover {
+div.blogify button.blogify-secondary:hover {
   background-color: #f5f5f5;
 }
