refactor(ui): make everything dynamic

--- a/admin/assets/css/blog-list.css
+++ b/admin/assets/css/blog-list.css
@@ -53,7 +53,7 @@ div.blogify article.blogify-blog-list section.blogify-item span.blogify-blog-sta
     font-weight: 500;
 }
 
-div.blogify article.blogify-blog-list section.blogify-item span.blogify-blogtitle {
-    font-size: 15px;
+div.blogify article.blogify-blog-list section.blogify-item span.blogify-blog-title {
+    font-size: 13px;
     font-weight: 700;
 }
